# databank-macro

./: .gitignore  LICENSE  NOTICE.md  README (9).md  README.md  WHITEPAPER.md  pyproject.toml  requirements.txt  run_local.py  streamlit_app.py
.streamlit/: config.toml
cold_storage/: rsa_private.pem
docs/: algorithm.html  animations.js  charts.js  contact.html  index.html  main.js  particles.js  pqc.html  style.css
docs/js/: main.js
src/core/: anamorf.py  campos_granulares.py  fluxus.py  inflex.py  vetor.py
src/ingestion/: cache.py  data_generator.py  real_data.py
src/mining/: pcq_miner.py
src/pcq/: custodia.py
tests/: data_generator.py  test_fusion.py
