[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databank-pcq"
version = "3.0.0"
description = "DataBank PCQ — Post-Quantum Custody & Glocal Economic Intelligence"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0", "pandas>=2.0.0", "scipy>=1.10.0",
    "scikit-learn>=1.3.0", "cryptography>=42.0.0",
    "requests>=2.31.0", "python-dotenv>=1.0.0",
    "pydantic>=2.0.0", "streamlit>=1.30.0",
    "plotly>=5.18.0", "httpx>=0.26.0",
]
